@@ -37,6 +37,7 @@ int main(int argc, char * argv[]) {
 
 	clog << "Reading from: " << argv[1] << " " << argv[2] << endl;
 
+
 	musical::MidiFileReader mfr1 = musical::MidiFileReader(argv[1]);
 	musical::MidiFileReader mfr2 = musical::MidiFileReader(argv[2]);
 
@@ -44,37 +45,51 @@ int main(int argc, char * argv[]) {
 	musical::MidiSequence * seq2 = static_cast<musical::MidiSequence*>(mfr2.generateSequence());
 	musical::MidiSequences * seqs = new musical::MidiSequences(seq1,seq2);
 
-	//seq1->dump_stdout();
-	//seq2->dump_stdout();
+	cout << "===========================================" << endl;
+	cout << "Alignment of " << seq1->getName() << " and " << seq2->getName() << endl;
 
-	clog << argv[1] << " : " << seq1->size() << " symbols" << endl;
-	clog << argv[2] << " : " << seq2->size() << " symbols" << endl;
+	cout << endl << "SEQUENCE 1 : " << seq1->getName() << endl;
+	seq1->dump_stdout();
+	cout << endl << "SEQUENCE 2 : " << seq2->getName() << endl;
+	seq2->dump_stdout();
+
+	//clog << argv[1] << " : " << seq1->size() << " symbols" << endl;
+	//clog << argv[2] << " : " << seq2->size() << " symbols" << endl;
 
 	clog << "Creating similarity rater" << endl;
+	musical::MidiExactPitchSimilarityRater *ep = new musical::MidiExactPitchSimilarityRater();
 	musical::MidiExactPitchIntervalSimilarityRater * sr = new musical::MidiExactPitchIntervalSimilarityRater();
-	musical::MidiPitchDurationSimilarityRater * r2 = new musical::MidiPitchDurationSimilarityRater();
+	musical::MidiIOISimilarityRater * ioi = new musical::MidiIOISimilarityRater();
 	musical::MidiIORSimilarityRater * ior = new musical::MidiIORSimilarityRater();
-	//musical::MidiExactPitchSimilarityRater *ep = new musical::MidiExactPitchSimilarityRater();
+	musical::MidiPitchDurationSimilarityRater * r2 = new musical::MidiPitchDurationSimilarityRater();
 
 	clog << "Creating gap rater" << endl;
 	musical::ConstantLinearGapRater * gr =  new musical::ConstantLinearGapRater(-0.5);
 
 	clog << "Creating aligner" << endl;
-	musical::LinearGlobalAligner nw = musical::LinearGlobalAligner(seqs, ior, gr);
+	musical::LinearGlobalAligner nw = musical::LinearGlobalAligner(seqs, r2, gr);
 	//nw.setFeedback(true);
+
+	cout << endl;
+	cout << "Aligner: Needleman-Wunsch" << endl;
+	cout << "Similarity Rater: " << "MidiPitchDurationSimilarityRater" << endl;
+	cout << "Gap score: -0.5" << endl;
+	cout << "Pitch shift of second sequence: " << seqs->getPitch12Shift() << endl;
 
 	clog << "Doing the alignment" << endl;
 	nw.doAlign();
 
 	musical::AlignmentVisualizer av(seqs);
-	//av.basicStdoutReport();
+	cout << endl;
+	av.basicStdoutReport();
 
 	double normalizedscore = seqs->getScore() / min(seq1->size(),seq2->size());
-	//cout << "           Score: " << seqs->getScore() << endl;
-	//cout << "Normalized score: " << normalizedscore << endl;
-	//cout << "        Distance: " << 1.0 - normalizedscore << endl;
+	cout << "           Score: " << seqs->getScore() << endl;
+	cout << "Normalized score: " << normalizedscore << endl;
+	cout << "        Distance: " << 1.0 - normalizedscore << endl;
+	cout << endl;
 
-	cout << seq1->getName() << "\t" << seq2->getName() << "\t" << normalizedscore << endl;
+	//cout << seq1->getName() << "\t" << seq2->getName() << "\t" << normalizedscore << endl;
 
 	delete seq1;
 	delete seq2;
